# HFT-Cpp

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PERFORMANCE.md  PROJECT_FILE_INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  benchmark.hpp  build.sh  cpu_relax.hpp  exchange.hpp  lob_benchmark  main.cpp  memory_pool.hpp  order.hpp  order_book.hpp  orderbook_demo  output.txt  run_ui.py  spsc_ring_buffer.hpp
ui/: app.js  index.html  styles.css
